Fix content padding on mobile

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,4 +1,5 @@
 .content {
   max-width: 40em;
   margin: 0 auto;
+  padding: 1rem;
 }
